1998-09-27  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mel.el (mime-encoding-list): New user option (renamed from
	`mime-content-transfer-encoding-list').
	(mime-encoding-list): New function.
	(mime-encoding-alist): New function.
	(mime-encode-region): Use `mime-encoding-alist' for completion.
	(mime-decode-region): Likewise.
	(mime-insert-encoded-file): Likewise.
	(mime-write-decoded-region): Likewise.

1998-09-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-decode.el (eword-decode-structured-field-list): Add
	Mail-Followup-To field.

1998-09-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-encode.el (eword-charset-encoding-alist): Add utf-8.

1998-09-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mel.el (mime-content-transfer-encoding-list): New user option.
	(mime-encode-region): Use `mime-content-transfer-encoding-list'
	for completion.
	(mime-decode-region): Likewise.
	(mime-insert-encoded-file): Likewise.
	(mime-write-decoded-region): Likewise.

	* mel.el (mime-write-decoded-region): fix typo.

1998-09-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-def.el (mel-define-method-function): Don't override.

1998-09-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mel.el, mel-ccl.el, FLIM-ELS: Add mel-ccl.el.

1998-09-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mel-dl.el, README.en, FLIM-ELS: Rename mel-dl.el to mel-b-dl.el.

	* mel.el: - Rename mel-dl.el to mel-b-dl.el.
		  - Move `mel-define-service' to mime-def.el.

	* mime-def.el (mel-define-service): New macro (moved from mel.el);
	fixed problem in Emacs.
	(mel-define-method): Use `mel-define-service'.
	(mel-define-method-function): Use `mel-define-service'.

1998-09-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mel.el (mime-encode-region): Don't regard nil encoding as
	"7bit".

1998-09-19  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-encode.el (eword-encode-text): Use
	`encoded-text-encode-string'.
	(tm-eword::encoded-word-length): `q-encoding-encoded-length' was